--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,25 @@
-# MCP環境変数サンプルファイル
-# このファイルを.envにコピーし、適切な値を設定してください
+# MCP環境変数設定ファイル
+# このファイルを.envとしてコピーし、適切な値を設定してください
 
 # OpenAI API設定
 OPENAI_API_KEY=your_openai_api_key_here
 
 # サーバー設定
-MCP_SERVER_HOST=127.0.0.1
-MCP_SERVER_PORT=5000
+MCP_SERVER_HOST=0.0.0.0
+MCP_SERVER_PORT=8080
 DEBUG=false
 
 # Blender設定
 BLENDER_ENABLED=true
-BLENDER_PORT=5001
+BLENDER_PORT=8081
+BLENDER_PATH=/path/to/your/blender/executable
 
 # UE5設定
 UE5_ENABLED=true
-UE5_PORT=5002 
+UE5_PORT=8082
+UE5_PATH=/path/to/your/unrealEditor/executable
+UE5_PROJECT_PATH=/path/to/your/project.uproject
+
+# サブモジュール設定
+BLENDER_MCP_PORT=9081
+UE5_MCP_PORT=9082 
